# Agentic-AI-Practice

./: README.md  requirements.txt
Agno_and_Phidata_Apps/: .env  agents.db  requirements.txt  semantic_classifier_and_sports_coach_agents_agno.py  tech_research_and_data_analysis_agents_phidata.py
Agno_and_Phidata_Apps/agent-ui/: package.json
Crew_AI_Apps/: .env  3_Marketing_Agent_with_Config.py  4_Legalising_Agent_with_Config.py  restricted_func.py
Crew_AI_Apps/config_legal_agents/: agents.yaml  tasks.yaml
Crew_AI_Apps/config_market_agents/: tasks.yaml
Custom_Agno_Phidata_Agents/: agents.db  semantic_classifier_and_sports_coach_agents_agno.py  tech_research_and_data_analysis_agents_phidata.py
Custom_Agno_Phidata_Agents/agent-ui/: package-lock.json
LangChain_LangGraph_LangSmith_Apps/: 6)_Retreival_Augmented_Generation_with_LangChain_Multiple_Ingestion.ipynb  9)_Building_Question_Answer_System_over_SQLdb.ipynb
LangChain_LangGraph_LangSmith_Apps/LangTrio_Agents/: 3_Human_in_the_Loop.py  main.py
LangChain_LangGraph_LangSmith_Apps/RestaurantDetailsGenerator/: .env  frontend_streamlit.py  style.css
LangChain_and_LangGraph/: .env  2)_Semantic_Search_Engine.ipynb  4) _LangChain_Chatbot_along_with_LangGraph.ipynb  5)_End_to_End_Agent_in_LangChain.ipynb
LangChain_and_LangGraph_Apps/: 1)_LLM_Application_Langchain.ipynb  3)_Extraction_and_Classification.ipynb
LangChain_and_LangGraph_Apps/LangTrio_Agents/: .env  1_Conditional_Graph.ipynb  2_Chatbot_with_Memory_LangSmith.ipynb  pyproject.toml
MCP_Server/: main.py
(+27 files in other folders)
