[project]
name = "langtrio-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grandalf>=0.8",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.10",
    "langgraph>=0.6.6",
    "langsmith>=0.4.25",
    "notebook>=7.4.5",
    "python-dotenv>=1.1.1",
]
